tests/NormalTests/paczka1/fuzzy1/10483105.err
Error in line 9: SCn6ugHAAb S285 27,0
Error in line 8: 3e7VAK S609 82,0
Error in line 10: SCn6ugHAAb S700 53,7
Error in line 15: 3e7VAK S285 90,3
Error in line 18: V6JF4Q S700 27,4
Error in line 19: 3e7VAK S609 84,7
Error in line 24: V6JF4Q S594 76,0
Error in line 16: SCn6ugHAAb S594 94,8
Error in line 30: SCn6ugHAAb S700 31,71
Error in line 28: SjhSZz S609 74,0
Error in line 38: 2TLHEd1Cec S700 19,8
